# minho_team_simulation_tools

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml
MinhoSimulator/: CMakeLists.txt
MinhoSimulator/include/: action_dialog.h  replay.h  replay_window.h
MinhoSimulator/src/: action_dialog.cpp  action_dialog.ui  main.cpp  replay.cpp  replay_window.cpp  replay_window.ui
TestWidgetsLocal/: TestWidgetsLocal.pro  ball.cpp  ball.h  customscene.cpp  customscene.h  desenharcampo.cpp  desenharcampo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  refboxinfo.cpp  refboxinfo.h  robo.cpp  robo.h  rs.qrc
TestWidgetsLocal/RTDB_Module/: cicle_iterator.cpp  cicle_iterator.h  externalrtdb.cpp  externalrtdb.h  filewriter.cpp  filewriter.h  paths.h  rtdbclient.cpp  rtdbclient.h  rtdbmainclass.cpp  rtdbmainclass.h  sender_bythread.cpp  sender_bythread.h  structs.h
TestWidgetsLocal/RTDB_Module/Config/: config_rtdb_client.json  config_tcp.json  readme  var_definitions.xls
TestWidgetsLocal/data/: campo-lar.txt  campo-oficial.txt
TestWidgetsLocal/data/startPosLar/: AwayKickOffL.txt  AwayKickOffR.txt  MinhoKickOffL.txt  MinhoKickOffR.txt  ParkL.txt  ParkR.txt
TestWidgetsLocal/data/startPosOfficial/: AwayKickOffL.txt  AwayKickOffR.txt  MinhoKickOffL.txt  MinhoKickOffR.txt  ParkL.txt  ParkR.txt  PenaltyL.txt  PenaltyR.txt
bs_plugin/include/: bs_plugin.hh
bs_plugin/src/: bs_plugin.cc
bs_robot_plugin/include/: bs_rplugin.hh
bs_robot_plugin/src/: bs_rplugin.cc
include/: gzwidget.h  includes.h  mainwindow.h  multicastpp.h  robotwidget.h
libs/FalconsJSON/: cPacketRefboxLogger.cpp  cPacketRefboxLogger.hpp  packetStructureRefboxLogger.hpp
libs/json-c/: json_inttypes.h
models/bnr_field/: model.config  model.sdf
models/bnr_oneA/: misc-data.md  model.config  model.sdf  temp.sdf
models/bnr_oneA/meshes/: base.STL  battery.STL  circuit.STL  motor.STL  tyre.STL  wheel.STL  wheel_support.STL
models/bs_ball/: model.config  model.sdf
models/bs_ball/materials/scripts/: msl_ball.material
models/bs_robot/: model.config  model.sdf
models/bs_robot/meshes/: head.stl  mid.stl  nr_3.stl  nr_4.stl  nr_5.stl  nr_6.stl
models/crate/: crate.dae  model.config  model.sdf
models/genbs_ball/: model.config  model.sdf
models/minhoteam_msl_robot/: model.sdf
models/minhoteam_msl_robot/meshes/: base.stl  nr_1.stl  nr_2.stl
models/msl_lar_field/: model.config  model.sdf
models/msl_lar_field/materials/scripts/: msl_field.material
models/msl_lar_field/meshes/: border.STL  collision.STL  goals.STL  lines.STL
models/msl_official_field/: model.config  model.sdf
models/msl_official_field/materials/scripts/: msl_field.material
models/msl_official_field/meshes/: msl_field_collision.dae  msl_field_visual.dae  oborder.STL  ocollision.STL  ofield.STL  ogoals.STL  olines.STL
models/msl_orange_ball/: model.sdf
models/msl_test/: model.config  model.sdf
models/msl_yellow_ball/: model.sdf
models/other_msl_robot/: model.config  model.sdf
models/robocup_msl_ball/: ball.sim  model (copy).sdf  model.config  model.sdf  msl_ball.SLDPRT
models/robocup_msl_ball/meshes/: msl_ball.dae
models/robocup_msl_field/: model (copy).sdf  model.config  model.sdf
models/robocup_msl_field/meshes/: centerline.stl  corner.stl
other_plugin/include/: other_robot.hh
other_plugin/src/: other_robot.cc
robot_plugin/include/: minho_robot.hh
robot_plugin/src/: minho_robot.cc
src/: gzwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  multicastpp.cpp  robotwidget.cpp  robotwidget.ui  thpool.c
tools/build-mtSim-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_renderingcamera.cpp  moc_renderview.cpp  moc_teleopprocessmanager.cpp  moc_worldmanager.cpp  qrc_resources.cpp  ui_mainwindow.h
tools/mtSim/: CameraWindow.cc  CameraWindow.hh  fieldbuilderdialog.cpp  fieldbuilderdialog.h  fieldbuilderdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mtSim.pro  renderingcamera.cpp  renderingcamera.h  renderview.cpp  renderview.h  resources.qrc  teleopprocessmanager.cpp  teleopprocessmanager.h  worldmanager.cpp  worldmanager.h
tools/mtSim/backup/: GazeboWorldDemo.cc  renderingengine.cpp  renderingengine.h  renderview.cpp
tools/mtSim/resources/configs/: camera_conf.xml  rosservice_conf.xml  teleop_conf.xml
tools/mtSim/resources/files/fieldbuilder/: official.xml
world_plugin/include/: minho_world.hh
world_plugin/src/: minho_world.cc
worlds/: bnr.world  bs_lar.world  bs_official.world  msl.world  msl_lar.world  msl_official.world  test.world
